--- a/Answers.Rmd
+++ b/Answers.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "Answers"
-output: html_notebook
+output:
+  pdf_document: default
+  html_notebook: default
 ---
 
 This is an [R Markdown](http://rmarkdown.rstudio.com) Notebook. When you execute code within the notebook, the results appear beneath the code. 
